# laboratory-works

./: .gitignore
laboratory_num1/1_variant/: CMakeLists.txt  Makefile  main.cpp  person.cpp  person.hpp  task
laboratory_num1/4_variant/: CMakeLists.txt  main.cpp
laboratory_num2/1_variant/: CMakeLists.txt  main.cpp  mymatrix.cpp  mymatrix.hpp
laboratory_num2/4_variant/: CMakeLists.txt  main.cpp  matrix.txt  mymatrix.hpp
laboratory_num2/6_variant/: CMakeLists.txt  main  main.cpp  matrix.txt  mymatrix.hpp
laboratory_num3/1_variant/: main.cpp  person.cpp  person.hpp
laboratory_num3/4_variant/: CMakeLists.txt  main.cpp  student.cpp  student.hpp
laboratory_num3/6_variant/: CMakeLists.txt  main  main.cpp  person.cpp  person.hpp
laboratory_num4/1_variant/: CMakeLists.txt  main.cpp
laboratory_num4/4_variant/: main.cpp
laboratory_num4/6_variant/: CMakeLists.txt  main.cpp
temp/: main.cpp
